--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2712,7 +2712,7 @@ hr {
   vertical-align: middle;
 }
 .links-of-author a::before {
-  background: #8aa752;
+  background: #7ae888;
   display: inline-block;
   margin-right: 3px;
   transform: translateY(-2px);
